--- a/home.html
+++ b/home.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <header>
-        <h1>oi amor</h1>
+        <h1>Oi amor!</h1>
         <h1>Bem vindo ao coração da Àgata</h1>
         
     </header>
 
     <main>
-        clique aqui
+        <h2 align="center">Clique para entrar 
+            <p align="center"> <a href="musica1.html">link</a></p>
+        </h2>
     </main>
 
     <footer>
