dia dos boiolas

--- a/musica1.html
+++ b/musica1.html
@@ -15,39 +15,47 @@
 
     <main>
         <div class="bloco">
-            <div class="album1"><img src="imagens/album.jpg" height="200px"> 
+            <div class="album1"><img src="C:\Users\55479\Pictures\Lovelove.jpg" height="240px"> 
                 <br>
-            <h5 align="center">musica nome</h5></div>
-            <div class="album2"><img src="imagens/album.jpg"  height="200px">
+            <h5 align="center">Love Love- Gilsons</h5>
+            <p align="center"> <a href="https://open.spotify.com/track/7nSataGo54Le0IfcFQCFLN?si=kooasQDgT66j57gENUUv_Q&utm_source=copy-link">escute aqui!</a></div>
+            <div class="album2"><img src="C:\Users\55479\Pictures\vemca.jpg"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
-            <div class="album3"><img src="imagens/album.jpg"  height="200px">
+                <h5 align="center">Vem Cá- PeléMilflows</h5>
+                <p align="center"> <a href="https://open.spotify.com/track/6hiKXxS7pgPKnKfCU7UJ6O?si=KixtdhcWSkW0lGBbVWU1VA&utm_source=copy-link">escute aqui!</a></div>
+            <div class="album3"><img src="C:\Users\55479\Pictures\Planos.png"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
-            <div class="album4"><img src="imagens/album.jpg"  height="200px">
+                <h5 align="center">Planos- BK, Luccas carlos</h5>
+                <p align="center"> <a href="https://open.spotify.com/track/7eYEQnY6Lzh3Y8jSOt3xEF?si=NZdJjvCLQ3SOKSsk0kCEDg&utm_source=copy-link">escute aqui!</a></div>
+            <div class="album4"><img src="C:\Users\55479\Pictures\Leal.jpg"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
-        </div>
+                <h5 align="center">Leal- Djonga</h5>
+                <p align="center"> <a href="https://open.spotify.com/track/7LC49U08KjfwzDMiGNkE1q?si=N5zxsiqfQeWsMKhaBVAN8A&utm_source=copy-link">escute aqui!</a></div>
+            </div>
 
         <div class="bloco">
-            <div class="album1"><img src="imagens/album.jpg" height="200px"> 
+            <div class="album1"><img src="C:\Users\55479\Pictures\Primera vista.jpg" height="240px"> 
                 <br>
-            <h5 align="center">musica nome</h5></div>
-            <div class="album2"><img src="imagens/album.jpg"  height="200px">
+            <h5 align="center">Primeira vista-Pineapple</h5>
+            <p align="center"> <a href="https://open.spotify.com/track/0ygdZoL2e8cyzdpfzM1iwi?si=N6kQvy09S0-Z6k7hN25Ngw&utm_source=copy-link">escute aqui!</a></div>
+            <div class="album2"><img src="C:\Users\55479\Pictures\refem.jpg"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
-            <div class="album3"><img src="imagens/album.jpg"  height="200px">
+                <h6 align="center">Refém- Xamã, L7, Maia, John</h6>
+                <p align="center"> <a href="">escute aqui!</a></div>
+            <div class="album3"><img src="C:\Users\55479\Pictures\Barcelona.jpg"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
-            <div class="album4"><img src="imagens/album.jpg"  height="200px">
+                <h5 align="center">Barcelona- L7, PK, Mun Ra</h5>
+                <p align="center"> <a href="">escute aqui!</a></div>
+            <div class="album4"><img src="C:\Users\55479\Pictures\pra voce ficar.jpg"  height="240px">
                 <br>
-                <h5 align="center">musica nome</h5></div>
+                <h5 align="center">Pra você ficar- Nairo</h5>
+                <p align="center"> <a href="https://open.spotify.com/track/7nfuTyQl3FDwxBspaww3Ng?si=QfksovOIT5q5Q_0SQmdeCg&utm_source=copy-link">escute aqui!</a></div>
         </div>
     </main>
 
     <footer>
         <h1>Ass: Àgata </h1>
-        <img src="imagens/coração.gif" alt="this slowpoke moves"  width="100" />
+        <p align="center"> <a href="motivos.html">link</a></p>
     </footer>
 </body>
 </html>
