--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
     </main>
 
     <footer>
-        <h1>Ass: Àgata </h1>
+        <h1>Ass: Àgata (sua surfistinha) </h1>
         <img src="imagens/coração.gif" alt="this slowpoke moves"  width="100" />
     </footer>
 </body>
